squash bug

--- a/src/components/content/TextInput.module.css
+++ b/src/components/content/TextInput.module.css
@@ -5,12 +5,11 @@ input::-webkit-input-placeholder {
   background-size: 17px 17px;
   caret-color: var(--color-font-paragraph);
   color: var(--color-font-paragraph);
-  filter: brightness(2);
+  filter: brightness(80%);
   font-size: 0.7rem;
   font-style: italic;
   font-weight: 500;
   line-height: 1.8rem;
-  opacity: calc(100% - 50%);
   padding-left: 20px;
 }
 
